Silence compilation warnings